# django-language

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
djangolanguage/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
wod/: admin.py  apps.py  models.py  test_models.py  test_views.py  tests.py  urls.py  views.py
wod/migrations/: 0001_initial.py  0002_add_initial_data.py
wod/templates/wod/: base.html  random_word.html
